# statjson

./: README.rst  TODO.md  setup.cfg  setup.py  statjson.py  tox.ini
src/statjson/: __main__.py  fields.py  time.py
statjson/: __init__.py  __main__.py  fields.py  filetypes.py  time.py
test/: test_stat2dict.py
