[aliases]
make=sdist bdist_wheel

[metadata]
name = statjson
version = attr:statjson.__version__
description = stat(2) output as JSON
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = statjson@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/statjson

keywords =
    stat
    json
    files
    permissions
    inode
    filemode
   #xattr
   #ACL

classifiers =
    Development Status :: 3 - Alpha
   #Development Status :: 4 - Beta
   #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: System Administrators
    Topic :: System :: Filesystems

project_urls =
    Source Code = https://github.com/jwodder/statjson
    Bug Tracker = https://github.com/jwodder/statjson/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
packages = find:
python_requires = ~=3.4
install_requires =

[options.entry_points]
console_scripts =
    statjson = statjson.__main__:main
